--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
+      address: '0x2840d12d926cc686217bb42b80b662c7d72ee787'
       abi: V1Factory
-      startBlock: 14980875
+      startBlock: 8625240
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,11 +34,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
+      address: '0x1782a13f176e84Be200842Ade79daAA0B09F0418'
       abi: V2Factory
-      startBlock: 16845360
+      startBlock: 9484660
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -62,11 +62,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x9c5d087f912e7187D9c75e90999b03FB31Ee17f5'
+      address: '0x38064F40B20347d58b326E767791A6f79cdEddCe'
       abi: V21Factory
-      startBlock: 22640938
+      startBlock: 11499150
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -90,11 +90,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MinionFactory
-    network: kovan
+    network: mainnet
     source:
-      address: '0x80ec2dB292E7a6D1D5bECB80e6479b2bE048AC98'
+      address: '0x2A0D29d0a9e5DE91512805c3E2B58c1e95700dDa'
       abi: MinionFactory
-      startBlock: 22640617
+      startBlock: 11499121
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -115,11 +115,11 @@ dataSources:
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: V2MinionFactory
-    network: kovan
+    network: mainnet
     source:
-      address: '0xCE63803E265617c55567a7A7b584fF2dbD76210B'
+      address: '0x88207Daf515e0da1A32399b3f92D128B1BF45294'
       abi: MinionFactory
-      startBlock: 24234494
+      startBlock: 12227886
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -139,35 +139,60 @@ dataSources:
           handler: handleSummonedV2Minion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
-    name: UberMinionFactory
-    network: kovan
+    name: MolochDAO
+    network: mainnet
     source:
-      address: '0x03042577463E3820F9cA6Ca3906BAad599ba9382'
-      abi: UberMinionFactory
-      startBlock: 23861045
+      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
+      abi: V1Moloch
+      startBlock: 7218560
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Moloch
-        - Minion
+        - Member
       abis:
-        - name: UberMinionFactory
-          file: ./abis/UberMinionFactory.json
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: >-
-            SummonUberMinion(indexed address,indexed
-            address,address,address,address,uint256,uint256,string,string)
-          handler: handleSummonedUberMinion
-      file: ./src/uberhaus-minion-factory-mapping.ts
+        - event: 'SummonComplete(indexed address,uint256)'
+          handler: handleSummonCompleteMoloch
+      file: ./src/legacy-mapping.ts
+  - kind: ethereum/contract
+    name: NiftyMinionFactory
+    network: mainnet
+    source:
+      address: '0x7EDfBDED3077Bc035eFcEA1835359736Fa342209'
+      abi: NiftyMinionFactory
+      startBlock: 13016332
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - NiftyMinion
+      abis:
+        - name: NiftyMinionFactory
+          file: ./abis/NiftyMinionFactory.json
+      eventHandlers:
+        - event: 'SummonMinion(indexed address,indexed address,string,string,uint256)'
+          handler: handleSummonedNiftyMinion
+      file: ./src/nifty-minion-factory-mapping.ts
   - kind: ethereum/contract
     name: SafeMinionFactory
-    network: kovan
+    network: mainnet
     source:
       address: '0xbC37509A283E2bb67fd151c34E72e826C501E108'
       abi: SafeMinionFactory
-      startBlock: 27112682
+      startBlock: 13199717
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -187,7 +212,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: kovan
+    network: mainnet
     source:
       abi: V1Moloch
     mapping:
@@ -231,7 +256,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: kovan
+    network: mainnet
     source:
       abi: V2Moloch
     mapping:
@@ -290,7 +315,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: kovan
+    network: mainnet
     source:
       abi: V21Moloch
     mapping:
@@ -343,34 +368,8 @@ templates:
         - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
-    name: UberhausMinionTemplate
-    network: kovan
-    source:
-      abi: UberhausMinion
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      file: ./src/uberhaus-minion-mapping.ts
-      entities:
-        - Moloch
-        - Minion
-        - Proposal
-      abis:
-        - name: UberhausMinion
-          file: ./abis/UberhausMinion.json
-      eventHandlers:
-        - event: SetUberHaus(address)
-          handler: handleSetUberHaus
-        - event: 'DelegateAppointed(uint256,address,address)'
-          handler: handleDelegateAppointed
-        - event: 'Impeachment(address,address)'
-          handler: handleImpeachment
-        - event: 'ExecuteAction(uint256,address)'
-          handler: handleExecuteAction
-  - kind: ethereum/contract
     name: SafeMinionTemplate
-    network: kovan
+    network: mainnet
     source:
       abi: SafeMinion
     mapping:
