adds new escrows

--- a/manifests/escrowMinion-ds.yaml
+++ b/manifests/escrowMinion-ds.yaml
@@ -16,7 +16,7 @@ mapping:
     - name: EscrowMinion
       file: ./abis/EscrowMinion.json
   eventHandlers:
-    - event: "ProposeAction(uint256,address,address,address[],uint256[10],uint256[10],uint256[10],address)"
+    - event: "ProposeAction(uint256,address,address,address[],uint256[],uint256[],uint256[],address)"
       handler: handleProposeAction
     - event: "ExecuteAction(uint256,address,address)"
       handler: handleExecuteAction
