--- a/manifests/v22Factory-ds.yaml
+++ b/manifests/v22Factory-ds.yaml
@@ -19,8 +19,6 @@ mapping:
     - name: Erc20Bytes32
       file: ./abis/Erc20Bytes32.json
   eventHandlers:
-    - event: >-
-        SummonComplete(indexed
-        address,address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+    - event: SummonComplete(indexed address,address,address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
       handler: handleSummonV22
   file: ./src/v22-factory-mapping.ts
