--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
 description: DAOHaus Supergraph
-repository: 'https://github.com/HausDAO/daohaus-supergraph'
+repository: "https://github.com/HausDAO/daohaus-supergraph"
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,12 +8,12 @@ dataSources:
     name: V1Factory
     network: xdai
     source:
-      address: '0x9232DeA84E91b49feF6b604EEA0455692FC27Ba8'
+      address: "0x9232DeA84E91b49feF6b604EEA0455692FC27Ba8"
       abi: V1Factory
       startBlock: 10733005
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Register
@@ -29,19 +29,19 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: 'Register(address,indexed address,uint256,string,uint256)'
+        - event: "Register(address,indexed address,uint256,string,uint256)"
           handler: handleRegisterV1
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
     network: xdai
     source:
-      address: '0x124F707B3675b5fdd6208F4483C5B6a0B9bAf316'
+      address: "0x124F707B3675b5fdd6208F4483C5B6a0B9bAf316"
       abi: V2Factory
       startBlock: 10733005
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Register
@@ -64,12 +64,12 @@ dataSources:
     name: V21Factory
     network: xdai
     source:
-      address: '0x0F50B2F3165db96614fbB6E4262716acc9F9e098'
+      address: "0x0F50B2F3165db96614fbB6E4262716acc9F9e098"
       abi: V21Factory
       startBlock: 13569775
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Register
@@ -85,19 +85,19 @@ dataSources:
             SummonComplete(indexed
             address,address[],address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256[])
           handler: handleSummonV21
-        - event: 'Register(uint256,address,string,string,uint256)'
+        - event: "Register(uint256,address,string,string,uint256)"
           handler: handleRegisterV21
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MinionFactory
     network: xdai
     source:
-      address: '0x9610389d548Ca0224aCaC40eB3241c5ED88D2479'
+      address: "0x9610389d548Ca0224aCaC40eB3241c5ED88D2479"
       abi: MinionFactory
       startBlock: 13569739
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -110,19 +110,19 @@ dataSources:
         - name: Minion
           file: ./abis/Minion.json
       eventHandlers:
-        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+        - event: "SummonMinion(indexed address,indexed address,string,string)"
           handler: handleSummonedMinion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: V2MinionFactory
     network: xdai
     source:
-      address: '0x53508D981439Ce6A3283597a4775F6f23504d4A2'
+      address: "0x53508D981439Ce6A3283597a4775F6f23504d4A2"
       abi: MinionFactory
       startBlock: 15503980
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -135,19 +135,19 @@ dataSources:
         - name: Minion
           file: ./abis/V2Minion.json
       eventHandlers:
-        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+        - event: "SummonMinion(indexed address,indexed address,string,string)"
           handler: handleSummonedV2Minion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: UberMinionFactory
     network: xdai
     source:
-      address: '0xf5106077892992B84c33C35CA8763895eb80B298'
+      address: "0xf5106077892992B84c33C35CA8763895eb80B298"
       abi: UberMinionFactory
       startBlock: 14958440
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -165,12 +165,12 @@ dataSources:
     name: SuperfluidMinionFactory
     network: xdai
     source:
-      address: '0xfC86DfDd3b2e560729c78b51dF200384cfe87438'
+      address: "0xfC86DfDd3b2e560729c78b51dF200384cfe87438"
       abi: SuperfluidMinionFactory
       startBlock: 15925433
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -179,19 +179,19 @@ dataSources:
         - name: SuperfluidMinionFactory
           file: ./abis/SuperfluidMinionFactory.json
       eventHandlers:
-        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+        - event: "SummonMinion(indexed address,indexed address,string,string)"
           handler: handleSummonedSuperfluidMinion
       file: ./src/superfluid-minion-factory-mapping.ts
   - kind: ethereum/contract
     name: NiftyMinionFactory
     network: xdai
     source:
-      address: '0xA6B75C3EBfA5a5F801F634812ABCb6Fd7055fd6d'
+      address: "0xA6B75C3EBfA5a5F801F634812ABCb6Fd7055fd6d"
       abi: NiftyMinionFactory
       startBlock: 16507968
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -200,19 +200,19 @@ dataSources:
         - name: NiftyMinionFactory
           file: ./abis/NiftyMinionFactory.json
       eventHandlers:
-        - event: 'SummonMinion(indexed address,indexed address,string,string,uint256)'
+        - event: "SummonMinion(indexed address,indexed address,string,string,uint256)"
           handler: handleSummonedNiftyMinion
       file: ./src/nifty-minion-factory-mapping.ts
   - kind: ethereum/contract
     name: SafeMinionFactory
     network: xdai
     source:
-      address: '0xA1b97D22e22507498B350A9edeA85c44bA7DBC01'
+      address: "0xA1b97D22e22507498B350A9edeA85c44bA7DBC01"
       abi: SafeMinionFactory
       startBlock: 18025529
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -230,12 +230,12 @@ dataSources:
     name: EscrowMinion
     network: xdai
     source:
-      address: '0xc9f9E7FC92A7D3B2b3554be850fFF462B7b382E7'
+      address: "0xc9f9E7FC92A7D3B2b3554be850fFF462B7b382E7"
       abi: EscrowMinion
       startBlock: 18589768
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -247,7 +247,7 @@ dataSources:
         - event: >-
             ProposeAction(uint256,address,address,address[],uint256[],uint256[],uint256[],address)
           handler: handleProposeAction
-        - event: 'ExecuteAction(uint256,address,address)'
+        - event: "ExecuteAction(uint256,address,address)"
           handler: handleExecuteAction
       file: ./src/escrow-minion-mapping.ts
 templates:
@@ -258,7 +258,7 @@ templates:
       abi: V1Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/v1-mapping.ts
       entities:
@@ -277,23 +277,23 @@ templates:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: 'SummonComplete(indexed address,uint256)'
+        - event: "SummonComplete(indexed address,uint256)"
           handler: handleSummonComplete
         - event: >-
             SubmitProposal(uint256,indexed address,indexed address,indexed
             address,uint256,uint256)
           handler: handleSubmitProposal
-        - event: 'SubmitVote(indexed uint256,indexed address,indexed address,uint8)'
+        - event: "SubmitVote(indexed uint256,indexed address,indexed address,uint8)"
           handler: handleSubmitVote
         - event: >-
             ProcessProposal(indexed uint256,indexed address,indexed
             address,uint256,uint256,bool)
           handler: handleProcessProposal
-        - event: 'Ragequit(indexed address,uint256)'
+        - event: "Ragequit(indexed address,uint256)"
           handler: handleRagequit
-        - event: 'Abort(indexed uint256,address)'
+        - event: "Abort(indexed uint256,address)"
           handler: handleAbort
-        - event: 'UpdateDelegateKey(indexed address,address)'
+        - event: "UpdateDelegateKey(indexed address,address)"
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
@@ -302,7 +302,7 @@ templates:
       abi: V2Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/v2-mapping.ts
       entities:
@@ -338,21 +338,21 @@ templates:
             SponsorProposal(indexed address,indexed
             address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessProposal
-        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessGuildKickProposal
-        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessWhitelistProposal
-        - event: 'UpdateDelegateKey(indexed address,address)'
+        - event: "UpdateDelegateKey(indexed address,address)"
           handler: handleUpdateDelegateKey
-        - event: 'CancelProposal(indexed uint256,address)'
+        - event: "CancelProposal(indexed uint256,address)"
           handler: handleCancelProposal
-        - event: 'Withdraw(indexed address,address,uint256)'
+        - event: "Withdraw(indexed address,address,uint256)"
           handler: handleWithdraw
-        - event: 'Ragequit(indexed address,uint256,uint256)'
+        - event: "Ragequit(indexed address,uint256,uint256)"
           handler: handleRagequit
-        - event: 'TokensCollected(indexed address,uint256)'
+        - event: "TokensCollected(indexed address,uint256)"
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
@@ -361,7 +361,7 @@ templates:
       abi: V21Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/v2-mapping.ts
       entities:
@@ -392,21 +392,21 @@ templates:
             SponsorProposal(indexed address,indexed
             address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessProposal
-        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessGuildKickProposal
-        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+        - event: "ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)"
           handler: handleProcessWhitelistProposal
-        - event: 'UpdateDelegateKey(indexed address,address)'
+        - event: "UpdateDelegateKey(indexed address,address)"
           handler: handleUpdateDelegateKey
-        - event: 'CancelProposal(indexed uint256,address)'
+        - event: "CancelProposal(indexed uint256,address)"
           handler: handleCancelProposal
-        - event: 'Withdraw(indexed address,address,uint256)'
+        - event: "Withdraw(indexed address,address,uint256)"
           handler: handleWithdraw
-        - event: 'Ragequit(indexed address,uint256,uint256)'
+        - event: "Ragequit(indexed address,uint256,uint256)"
           handler: handleRagequit
-        - event: 'TokensCollected(indexed address,uint256)'
+        - event: "TokensCollected(indexed address,uint256)"
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: UberhausMinionTemplate
@@ -415,7 +415,7 @@ templates:
       abi: UberhausMinion
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/uberhaus-minion-mapping.ts
       entities:
@@ -428,11 +428,11 @@ templates:
       eventHandlers:
         - event: SetUberHaus(address)
           handler: handleSetUberHaus
-        - event: 'DelegateAppointed(uint256,address,address)'
+        - event: "DelegateAppointed(uint256,address,address)"
           handler: handleDelegateAppointed
-        - event: 'Impeachment(address,address)'
+        - event: "Impeachment(address,address)"
           handler: handleImpeachment
-        - event: 'ExecuteAction(uint256,address)'
+        - event: "ExecuteAction(uint256,address)"
           handler: handleExecuteAction
   - kind: ethereum/contract
     name: SuperfluidMinionTemplate
@@ -441,7 +441,7 @@ templates:
       abi: SuperfluidMinion
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/superfluid-minion-mapping.ts
       entities:
@@ -452,11 +452,11 @@ templates:
         - name: SuperfluidMinion
           file: ./abis/SuperfluidMinion.json
       eventHandlers:
-        - event: 'ProposeStream(uint256,address)'
+        - event: "ProposeStream(uint256,address)"
           handler: handleProposedStream
-        - event: 'ExecuteStream(uint256,address)'
+        - event: "ExecuteStream(uint256,address)"
           handler: handleExecutedStream
-        - event: 'StreamCanceled(uint256,address)'
+        - event: "StreamCanceled(uint256,address)"
           handler: handleStreamCanceled
         - event: ActionCanceled(uint256)
           handler: handleStreamProposalCanceled
@@ -467,7 +467,7 @@ templates:
       abi: SafeMinion
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       file: ./src/safe-minion-mapping.ts
       entities:
@@ -482,5 +482,5 @@ templates:
             ProposeNewAction(indexed bytes32,indexed
             uint256,address,uint256,address,bool,bytes)
           handler: handleProposeAction
-        - event: 'ExecuteAction(indexed bytes32,indexed uint256,bytes,address)'
+        - event: "ExecuteAction(indexed bytes32,indexed uint256,bytes,address)"
           handler: handleExecuteAction
