--- a/manifests/v22AndSafeMinion-ds.yaml
+++ b/manifests/v22AndSafeMinion-ds.yaml
@@ -17,6 +17,6 @@ mapping:
   eventHandlers:
     - event: SummonComplete(address,indexed address,address,address,string)
       handler: handleSummonComplete
-    - event: SetupComplete(indexed address,address,address[],uint256[],uint256[])
+    - event: SetupComplete(indexed address,address,address[],address[],uint256[],uint256[])
       handler: handleSetupComplete
   file: ./src/v22-safe-minion-factory-mapping.ts
