--- a/manifests/yeeterFactory-ds.yaml
+++ b/manifests/yeeterFactory-ds.yaml
@@ -15,6 +15,6 @@ mapping:
     - name: YeeterFactory
       file: ./abis/YeeterFactory.json
   eventHandlers:
-    - event: SummonYeetComplete(indexed address,address,address,uint256,uint256,uint256,uint256,uint256)
+    - event: SummonYeetComplete(indexed address,address,address,uint256,uint256,uint256,uint256,uint256,string)
       handler: handleSummonYeeter
   file: ./src/yeeter-factory-mapping.ts
