--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,16 +1,16 @@
 specVersion: 0.0.2
 description: DAOHaus Supergraph
-repository: "https://github.com/HausDAO/daohaus-supergraph"
+repository: 'https://github.com/HausDAO/daohaus-supergraph'
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0x9232DeA84E91b49feF6b604EEA0455692FC27Ba8"
+      address: '0x610247467d0dfA8B477ad7Dd1644e86CB2a79F8F'
       abi: V1Factory
-      startBlock: 10733005
+      startBlock: 6494343
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -29,16 +29,16 @@ dataSources:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: "Register(address,indexed address,uint256,string,uint256)"
+        - event: 'Register(address,indexed address,uint256,string,uint256)'
           handler: handleRegisterV1
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0x124F707B3675b5fdd6208F4483C5B6a0B9bAf316"
+      address: '0x763b61A62EF076ad960E1d513713B2aeD7C1b88e'
       abi: V2Factory
-      startBlock: 10733005
+      startBlock: 6494329
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -62,11 +62,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0x0F50B2F3165db96614fbB6E4262716acc9F9e098"
+      address: '0xC33a4EfecB11D2cAD8E7d8d2a6b5E7FEacCC521d'
       abi: V21Factory
-      startBlock: 13569775
+      startBlock: 7771115
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -85,16 +85,42 @@ dataSources:
             SummonComplete(indexed
             address,address[],address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256[])
           handler: handleSummonV21
-        - event: "Register(uint256,address,string,string,uint256)"
+        - event: 'Register(uint256,address,string,string,uint256)'
           handler: handleRegisterV21
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: MinionFactory
-    network: xdai
+    name: V22Factory
+    network: rinkeby
     source:
-      address: "0x9610389d548Ca0224aCaC40eB3241c5ED88D2479"
+      address: '0x35dDDa3938A063f5827428C170f015De78548C8d'
+      abi: V22Factory
+      startBlock: 9854098
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V22Factory
+          file: ./abis/V22Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address,address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonV22
+      file: ./src/v22-factory-mapping.ts
+  - kind: ethereum/contract
+    name: MinionFactory
+    network: rinkeby
+    source:
+      address: '0x316eFCd421b0654B7aE8E806880D4AE88ecaE206'
       abi: MinionFactory
-      startBlock: 13569739
+      startBlock: 7737496
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -110,16 +136,16 @@ dataSources:
         - name: Minion
           file: ./abis/Minion.json
       eventHandlers:
-        - event: "SummonMinion(indexed address,indexed address,string,string)"
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
           handler: handleSummonedMinion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: V2MinionFactory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0x53508D981439Ce6A3283597a4775F6f23504d4A2"
+      address: '0x313F02A44089150C9ff7011D4e87b52404A914A9'
       abi: MinionFactory
-      startBlock: 15503980
+      startBlock: 8402027
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -135,39 +161,16 @@ dataSources:
         - name: Minion
           file: ./abis/V2Minion.json
       eventHandlers:
-        - event: "SummonMinion(indexed address,indexed address,string,string)"
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
           handler: handleSummonedV2Minion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
-    name: UberMinionFactory
-    network: xdai
-    source:
-      address: "0xf5106077892992B84c33C35CA8763895eb80B298"
-      abi: UberMinionFactory
-      startBlock: 14958440
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - Minion
-      abis:
-        - name: UberMinionFactory
-          file: ./abis/UberMinionFactory.json
-      eventHandlers:
-        - event: >-
-            SummonUberMinion(indexed address,indexed
-            address,address,address,address,uint256,uint256,string,string)
-          handler: handleSummonedUberMinion
-      file: ./src/uberhaus-minion-factory-mapping.ts
-  - kind: ethereum/contract
     name: SuperfluidMinionFactory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0xfC86DfDd3b2e560729c78b51dF200384cfe87438"
+      address: '0x4b168c1a1E729F4c8e3ae81d09F02d350fc905ca'
       abi: SuperfluidMinionFactory
-      startBlock: 15925433
+      startBlock: 8541482
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -179,37 +182,40 @@ dataSources:
         - name: SuperfluidMinionFactory
           file: ./abis/SuperfluidMinionFactory.json
       eventHandlers:
-        - event: "SummonMinion(indexed address,indexed address,string,string)"
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
           handler: handleSummonedSuperfluidMinion
       file: ./src/superfluid-minion-factory-mapping.ts
   - kind: ethereum/contract
-    name: NiftyMinionFactory
-    network: xdai
+    name: EscrowMinion
+    network: rinkeby
     source:
-      address: "0xA6B75C3EBfA5a5F801F634812ABCb6Fd7055fd6d"
-      abi: NiftyMinionFactory
-      startBlock: 16507968
+      address: '0xEB28321b7952CC34bFb734413b58496A889C9660'
+      abi: EscrowMinion
+      startBlock: 9471294
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
-        - NiftyMinion
+        - Proposal
       abis:
-        - name: NiftyMinionFactory
-          file: ./abis/NiftyMinionFactory.json
+        - name: EscrowMinion
+          file: ./abis/EscrowMinion.json
       eventHandlers:
-        - event: "SummonMinion(indexed address,indexed address,string,string,uint256)"
-          handler: handleSummonedNiftyMinion
-      file: ./src/nifty-minion-factory-mapping.ts
+        - event: >-
+            ProposeAction(uint256,address,address,address[],uint256[],uint256[],uint256[],address)
+          handler: handleProposeAction
+        - event: 'ExecuteAction(uint256,address,address)'
+          handler: handleExecuteAction
+      file: ./src/escrow-minion-mapping.ts
   - kind: ethereum/contract
     name: SafeMinionFactory
-    network: xdai
+    network: rinkeby
     source:
-      address: "0xA1b97D22e22507498B350A9edeA85c44bA7DBC01"
+      address: '0x3f13ABc8931c0e381Ce6d1Be9f978aE6E9d99Cb8'
       abi: SafeMinionFactory
-      startBlock: 18025529
+      startBlock: 9269583
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -227,33 +233,55 @@ dataSources:
           handler: handleSummonedSafeMinion
       file: ./src/safe-minion-factory-mapping.ts
   - kind: ethereum/contract
-    name: EscrowMinion
-    network: xdai
+    name: V22AndSafeMinionFactory
+    network: rinkeby
     source:
-      address: "0xc9f9E7FC92A7D3B2b3554be850fFF462B7b382E7"
-      abi: EscrowMinion
-      startBlock: 18589768
+      address: '0xE8d33d1047B7D8C8016ad1E5E3E201cb3F38F5d4'
+      abi: V22AndSafeMinionFactory
+      startBlock: 9854107
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - Moloch
-        - Proposal
+        - Shaman
       abis:
-        - name: EscrowMinion
-          file: ./abis/EscrowMinion.json
+        - name: V22AndSafeMinionFactory
+          file: ./abis/V22AndSafeMinionFactory.json
+      eventHandlers:
+        - event: 'SummonComplete(address,indexed address,address,address,string)'
+          handler: handleSummonComplete
+        - event: >-
+            SetupComplete(indexed
+            address,address,address[],address[],uint256[],uint256[])
+          handler: handleSetupComplete
+      file: ./src/v22-safe-minion-factory-mapping.ts
+  - kind: ethereum/contract
+    name: YeeterFactory
+    network: rinkeby
+    source:
+      address: '0xcb457EAe937061c9Bca9A8691fc84104C0Ad726B'
+      abi: YeeterFactory
+      startBlock: 9854421
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Shaman
+      abis:
+        - name: YeeterFactory
+          file: ./abis/YeeterFactory.json
       eventHandlers:
         - event: >-
-            ProposeAction(uint256,address,address,address[],uint256[],uint256[],uint256[],address)
-          handler: handleProposeAction
-        - event: "ExecuteAction(uint256,address,address)"
-          handler: handleExecuteAction
-      file: ./src/escrow-minion-mapping.ts
+            SummonYeetComplete(indexed
+            address,address,address,uint256,uint256,uint256,uint256,uint256,string)
+          handler: handleSummonYeeter
+      file: ./src/yeeter-factory-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: xdai
+    network: rinkeby
     source:
       abi: V1Moloch
     mapping:
@@ -277,27 +305,27 @@ templates:
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: "SummonComplete(indexed address,uint256)"
+        - event: 'SummonComplete(indexed address,uint256)'
           handler: handleSummonComplete
         - event: >-
             SubmitProposal(uint256,indexed address,indexed address,indexed
             address,uint256,uint256)
           handler: handleSubmitProposal
-        - event: "SubmitVote(indexed uint256,indexed address,indexed address,uint8)"
+        - event: 'SubmitVote(indexed uint256,indexed address,indexed address,uint8)'
           handler: handleSubmitVote
         - event: >-
             ProcessProposal(indexed uint256,indexed address,indexed
             address,uint256,uint256,bool)
           handler: handleProcessProposal
-        - event: "Ragequit(indexed address,uint256)"
+        - event: 'Ragequit(indexed address,uint256)'
           handler: handleRagequit
-        - event: "Abort(indexed uint256,address)"
+        - event: 'Abort(indexed uint256,address)'
           handler: handleAbort
-        - event: "UpdateDelegateKey(indexed address,address)"
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: xdai
+    network: rinkeby
     source:
       abi: V2Moloch
     mapping:
@@ -338,25 +366,25 @@ templates:
             SponsorProposal(indexed address,indexed
             address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: "ProcessProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessProposal
-        - event: "ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessGuildKickProposal
-        - event: "ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessWhitelistProposal
-        - event: "UpdateDelegateKey(indexed address,address)"
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
-        - event: "CancelProposal(indexed uint256,address)"
+        - event: 'CancelProposal(indexed uint256,address)'
           handler: handleCancelProposal
-        - event: "Withdraw(indexed address,address,uint256)"
+        - event: 'Withdraw(indexed address,address,uint256)'
           handler: handleWithdraw
-        - event: "Ragequit(indexed address,uint256,uint256)"
+        - event: 'Ragequit(indexed address,uint256,uint256)'
           handler: handleRagequit
-        - event: "TokensCollected(indexed address,uint256)"
+        - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: xdai
+    network: rinkeby
     source:
       abi: V21Moloch
     mapping:
@@ -392,51 +420,86 @@ templates:
             SponsorProposal(indexed address,indexed
             address,uint256,uint256,uint256)
           handler: handleSponsorProposal
-        - event: "ProcessProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessProposal
-        - event: "ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessGuildKickProposal
-        - event: "ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)"
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
           handler: handleProcessWhitelistProposal
-        - event: "UpdateDelegateKey(indexed address,address)"
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
-        - event: "CancelProposal(indexed uint256,address)"
+        - event: 'CancelProposal(indexed uint256,address)'
           handler: handleCancelProposal
-        - event: "Withdraw(indexed address,address,uint256)"
+        - event: 'Withdraw(indexed address,address,uint256)'
           handler: handleWithdraw
-        - event: "Ragequit(indexed address,uint256,uint256)"
+        - event: 'Ragequit(indexed address,uint256,uint256)'
           handler: handleRagequit
-        - event: "TokensCollected(indexed address,uint256)"
+        - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
-    name: UberhausMinionTemplate
-    network: xdai
+    name: MolochV22Template
+    network: rinkeby
     source:
-      abi: UberhausMinion
+      abi: V22Moloch
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/uberhaus-minion-mapping.ts
+      file: ./src/v2-mapping.ts
       entities:
         - Moloch
-        - Minion
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
         - Proposal
+        - Shaman
       abis:
-        - name: UberhausMinion
-          file: ./abis/UberhausMinion.json
+        - name: V22Moloch
+          file: ./abis/V22Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: SetUberHaus(address)
-          handler: handleSetUberHaus
-        - event: "DelegateAppointed(uint256,address,address)"
-          handler: handleDelegateAppointed
-        - event: "Impeachment(address,address)"
-          handler: handleImpeachment
-        - event: "ExecuteAction(uint256,address)"
-          handler: handleExecuteAction
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
+        - event: 'SetSpamPrevention(address,uint256)'
+          handler: handleSpamPrevention
+        - event: 'SetShaman(indexed address,bool)'
+          handler: handleSetShaman
+        - event: 'Shaman(indexed address,uint256,uint256,bool)'
+          handler: handleShaman
   - kind: ethereum/contract
     name: SuperfluidMinionTemplate
-    network: xdai
+    network: rinkeby
     source:
       abi: SuperfluidMinion
     mapping:
@@ -452,17 +515,17 @@ templates:
         - name: SuperfluidMinion
           file: ./abis/SuperfluidMinion.json
       eventHandlers:
-        - event: "ProposeStream(uint256,address)"
+        - event: 'ProposeStream(uint256,address)'
           handler: handleProposedStream
-        - event: "ExecuteStream(uint256,address)"
+        - event: 'ExecuteStream(uint256,address)'
           handler: handleExecutedStream
-        - event: "StreamCanceled(uint256,address)"
+        - event: 'StreamCanceled(uint256,address)'
           handler: handleStreamCanceled
         - event: ActionCanceled(uint256)
           handler: handleStreamProposalCanceled
   - kind: ethereum/contract
     name: SafeMinionTemplate
-    network: xdai
+    network: rinkeby
     source:
       abi: SafeMinion
     mapping:
@@ -482,5 +545,5 @@ templates:
             ProposeNewAction(indexed bytes32,indexed
             uint256,address,uint256,address,bool,bytes)
           handler: handleProposeAction
-        - event: "ExecuteAction(indexed bytes32,indexed uint256,bytes,address)"
+        - event: 'ExecuteAction(indexed bytes32,indexed uint256,bytes,address)'
           handler: handleExecuteAction
